# tasks-authomation

./: .gitignore  LICENSE  pyproject.toml
organize-downloads/: config.json  oraganize-downloads-folder.py
